nesc-frontend/src/test/resources/integration/programs/good/good11/C.nc
/* Analysis of values of a type declared as a generic type parameter with
   @number() attribute. */

configuration C
{
}
implementation
{
   components new M(float);
}
