nesc-frontend/src/test/resources/integration/programs/bad/bad15/C.nc
/* Invalid usage of a variable of a type with @integer() attribute. */

configuration C
{
}
implementation
{
   components new M(unsigned long);
}
